# PCRAG

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
attacks/: tamper.py
core/: __init__.py  canonicalize.py  certificate.py  claims.py  crypto.py  embeddings.py  llm.py  pipeline.py  retriever.py  schema.py  spans.py  transparency.py  verifier_nli.py
data/: __init__.py  loader.py
eval/: ablation.py  full_eval.py  generate_report.py  metrics.py  run_eval.py  statistics.py
figures/: PCRAG_Paper_Figures.md
golden/: golden_certificate.json
renderer_web/: index.html  package-lock.json  package.json  vite.config.ts
renderer_web/src/: App.tsx  CertificateVerifier.ts
renderer_web/src/components/: CertificateView.tsx  ClaimCard.tsx
server/: app.py  models.py
tests/: test_api.py  test_attacks.py  test_canonicalize.py  test_certificate.py  test_claims.py  test_cross_system.py  test_crypto.py  test_eval_suite.py  test_golden_vectors.py  test_metrics.py  test_pipeline.py  test_retriever.py  test_schema.py  test_spans.py  test_statistics.py  test_transparency.py  test_verifier_cli.py
verifier_cli/: cli.py
