[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcrag"
version = "1.0.0"
description = "Proof-Carrying RAG — Cryptographic Evidence Certificates for Retrieval-Augmented Generation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "cryptography>=41.0.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "sentence-transformers>=2.2.0",
    "rank-bm25>=0.2.2",
    "datasets>=2.15.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "groq>=0.4.0",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "nltk>=3.8.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.90.0",
]
eval = [
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "nltk>=3.8.0",
]

[project.scripts]
pcrag-verify = "verifier_cli.cli:main"
pcrag-eval = "eval.generate_report:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
